# sum_type

./: CMakeLists.txt  README.md  osf-sum_type-config.cmake
cmake/: osf-cmake-helpers.cmake  osf-sum-type-config.cmake.in
include/: sum_type.hpp
include/osf/: sum_type.hpp
test/: CMakeLists.txt  test.cpp
